The education is complete.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <section class="section-1">
                 <div class="base__container section__container">
                     <div class="article">
-                        
                         <div class="article__title">
                             Hello, I am Jessica
                         </div>
@@ -49,26 +48,109 @@
                                 Download CV
                             </button>
                         </div>
-                        <!-- <div class="article__list">
-                            <div class="article__list article__list__item">
-                                <img src="assets/Checkmark.svg" alt="">
-                                <span>No Credit Card Required</span>
-                            </div>
-                            <div class="article__list article__list__item">
-                                <img src="assets/Checkmark.svg" alt="">
-                                <span>10 Free Templates</span>
-                            </div>
-                        </div> -->
                     </div>
                     <div class="img">
                         <div class="img__square">
-                            <img class="img__kaka" src="assets/jessica.jpg" alt="">
+                            <img class="img__avatar" src="assets/jessica.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </section>
 
             <section class="section-2">
+                <div class="base__container section__container">
+                    <!-- <span class="text-primary weight-bold">About Me</span> -->
+                    <div class="title text-primary">
+                        About Me
+                    </div>
+                    <div class="article">
+                        <span>
+                            I've explored various front-end frameworks like Angular, AngularJS, and Vue. I also have backend expertise with Node.js, MongoDB, and MSSQL, and I've ventured into cross-platform development using Electron.js. I'm constantly seeking innovative ways to enhance user experiences and stay updated with technology.
+                        </span>
+                    </div>
+
+                    <div class="cards">
+                        <div class="card card--1">
+                            <div class="card__side">
+                                <!-- <img src="assets/time.svg" alt="" class="card__icon"> -->
+                                <div class="card__title--1">
+                                    Master's Degree
+                                </div>
+                                <div class="card__title--2">
+                                    NATIONAL CHIAO TUNG UNIVERSITY 交通大學
+                                </div>
+                                <div class="card__sub">
+                                    <div>
+                                        Hsinchu, Taiwan 2011 - 2013
+                                    </div>
+                                    <div>
+                                        M.S., Molecular Medicine and Bioengineering
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card--2">
+                            <div class="card__side">
+                                <!-- <img src="assets/time.svg" alt="" class="card__icon"> -->
+                                <div class="card__title--1">
+                                    Bachelor's Degree
+                                </div>
+                                <div class="card__title--2">
+                                    KAOHSIUNG MEDICAL UNIVERSITY 高雄醫學大學
+                                </div>
+                                <div class="card__sub">
+                                    <div>
+                                        Kaohsiung, Taiwan 2008 - 2011
+                                    </div>
+                                    <div>
+                                        B.S., Biotechnology
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card card--3">
+                            <div class="card__side card__side--front">
+                                <!-- <img src="assets/time.svg" alt="" class="card__icon"> -->
+                                <div class="card__title--1">
+                                    Specialized Degree
+                                </div>
+                                <div class="card__title--2">
+                                    UCOM Training Center 恆逸資訊
+                                </div>
+                                <div class="card__sub">
+                                    <div>
+                                        Jun. 2016 - Oct.2016
+                                    </div>
+                                    <div>
+                                        智慧型手機應用程式設計實務班 (414hr)
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card__side card__side--back">
+                                <ol>
+                                    <li>手機程式設計基本概論</li>
+                                    <li>Java程式語言與物件導向程式設計</li>
+                                    <li>Google Android 程式實戰演練</li>
+                                    <li>iPhone Objective-C 課程</li>
+                                    <li>iPhone Swift 課程</li>
+                                    <li>iPhone App 程式開發</li>
+                                    <li>使用者介面視覺構成解析與優化</li>
+                                    <li>使用者介面視覺構成解析與優化</li>
+                                    <li>JavaScript & jQuery 網頁實作</li>
+                                    <li>HTML5 與 CSS3 網站開發實務</li>
+                                    <li>跨平台手機 App 開發實務</li>
+                                </ol>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="section-2-old">
                 <div class="base__container section__container">
                     <span class="text-primary weight-bold">Why Fiber?</span>
                     <div class="title">
@@ -105,6 +187,7 @@
                     </div>
                 </div>
             </section>
+
             <section class="section-3">
                 <div class="base__container section__container">
                     <div class="article">
